  the attacks. This prevents a situation where Find Attacks after a scan yielded
  nothing because Armitage had not synced with the database yet.
- Deconfliction server now complains when you try to use 127.0.0.1 as your host
- Added cut/copy/paste/clear menu to most textfields.
- Added Workspaces -> Manage to edit, add, and remove dynamic workspaces.

11.13.11 - A major rewrite of a lot of stuff.
--------
- Moved from XML/RPC interface to MSGPACK. This should be much faster.
- Removed Armitage dependence on Metapsloit db.* API--since it may go away soon.
- Attack recommendations and Hail Mary no longer depend on db_autopwn. New code
  offers same results with improved speed.
- Simplified Hail Mary and Find Attacks to use port/OS information only.
- Greatly improved keystroke recorder. The option is now called "Log Keystrokes".
  It uses the Metasploit keystroke_recorder post module. Results are regularly 
  dumped into the post module window. Also, the results are stored as loot 
  available for the team to view.
- Launching the keystroke_recorder post module now makes an announcement to the
  event log.
- Added a button to Processes tab to log keystrokes. This will bring up a the
  keystroke_recorder module configured to migrate to the process and record 
  keystrokes there.
- Removed Workspaces menu. Armitage now works from the default workspace.
- Simplified Hosts menu.
- Meterpreter -> Access -> Persistence now calls persistence post module.
- Improved Meterpreter -> Access -> Steal Tokens, it's still wonky but it's a 
  little better now.
- Host import now uses db_import command running in a console.
- Added Armitage -> Set Exploit Rank to update the minimum exploit rank value.
- Armitage now displays up to 512 hosts and 12,288 services at any given time.
  This keeps Armitage operable even if you scan a big freaking network.
- Added dynamic workspaces. This feature gives you the ability to define a filter